contact changes done

--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,9 @@
 <head>
 
 </head>
-<h1 align="center">	Contact	</h1>
+	<h1 align="center">	Contact	</h1>
+	<p align="center">Name: Richard Melberson</p>
+	<p align="center">Phone number: 468 765 468</p>
+
 
 </html>
