Homepage.html -> added title

--- a/Homepage.html
+++ b/Homepage.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
-
+	<title>HOMEPAGE</title>
 </head>
-<h1 align="center">
-Hello
-</h1>
+
+<body>
+	<h1 align="center">Hello</h1>
+
+</body>
 
 </html>
